--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -3,4 +3,33 @@
   height: 100%;
   background: #fff5e8;
   border-radius: 40px;
+  border: none;
+  display: grid;
+  place-items: center;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: clamp(20px, 2vw, 30px);
+  line-height: 30px;
+  color: hsla(34, 34%, 21%, 1);
+  border: none;
+  cursor: pointer;
+  max-width: clamp(160px, 20vw, 230px);
+  min-height: clamp(45px, 8vw, 65px);
+  padding: 0.35em 1.1em;
+  transition: all 0.2s ease-in-out;
+
+  &:hover {
+    background-color: hsla(29, 65%, 34%, 1);
+    color: #fff5e8;
+    transform: scale(1.05);
+    transition: all 0.2s ease-in-out;
+  }
+
+  &:focus {
+    background-color: hsla(29, 65%, 34%, 1);
+    color: #fff5e8;
+    outline: none;
+    transform: scale(1.05);
+  }
 }
