--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,3 +22,19 @@ body {
   background-color: utils.$scd-clr;
   font-size : 20px;
 }
+
+.display-none {
+  display: none;
+}
+.neutral-btn {
+  display: block;
+  width: fit-content;
+  height: fit-content;
+  border: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  &:focus {
+    outline: none;
+  }
+}
